kustomize/base/emailservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: core
  labels:
    app: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      serviceAccountName: emailservice-sa
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          image: jukpozi/emailservice:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            periodSeconds: 5
            grpc:
              port: 5000
          livenessProbe:
            periodSeconds: 5
            grpc:
              port: 5000
