kustomize/base/emailservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: core
  labels:
    app: emailservice
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
    - name: grpc
      port: 5000
      targetPort: 5000
