kustomize/base/emailservice/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice
  namespace: core
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 5000
          protocol: TCP
